--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://git4roman.github.io/portfolio",
+  "homepage": "https://romankhatri.com.np",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
